# ORGII

./: .babelrc.js  .cursorignore  .env.example  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .madgerc  .npmrc  .prettierrc  .svgrrc  .unimportedrc.json  BUG_AUDIT.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pl.md  README.pt.md  README.ru.md  README.tr.md  README.vi.md  README.zh-Hant.md  README.zh.md  commitlint.config.cjs  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vitest.config.ts  webpack.config.js
src-tauri/: .gitignore  .taurignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  insta.yaml  provider-key-check.example.json  rust-analyzer.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/crates/advanced-search/: Cargo.toml
src-tauri/crates/advanced-search/src/: bytes_filter.rs  index.rs  lib.rs  semantic.rs  tantivy_index.rs  types.rs
src-tauri/crates/agent-cli/: Cargo.toml
src-tauri/crates/agent-cli/src/: lib.rs
src-tauri/crates/agent-core/: Cargo.toml  build.rs
src-tauri/crates/agent-core/src/: ARCHITECTURE.md  debug.rs  lib.rs  lifecycle.rs  test_support.rs
src-tauri/crates/api-search/: Cargo.toml
src-tauri/crates/api-search/src/: code_routes.rs  error.rs  file_routes.rs  lib.rs  routes.rs  types.rs
src-tauri/crates/app-paths/: Cargo.toml
src-tauri/crates/app-paths/src/: lib.rs
src-tauri/crates/app-platform/: Cargo.toml  build.rs
src-tauri/crates/app-platform/src/: lib.rs
src-tauri/crates/app-utils/: Cargo.toml
src-tauri/crates/app-utils/src/: json.rs  lib.rs  testing.rs
src-tauri/crates/app-window/: Cargo.toml
src-tauri/crates/app-window/src/: commands.rs  lib.rs  windows_corner.rs
src-tauri/crates/bin-gateway-chat-cli/: Cargo.toml
src-tauri/crates/bin-gateway-chat-cli/src/: main.rs
src-tauri/crates/bin-provider-key-check/: Cargo.toml
src-tauri/crates/bin-provider-key-check/src/: main.rs
src-tauri/crates/bin-telegram-smoke/: Cargo.toml
src-tauri/crates/bin-telegram-smoke/src/: main.rs
src-tauri/crates/browser/: Cargo.toml
src-tauri/crates/browser/src/: capture.rs  cookies.rs  dom_editor.rs  inline.rs  internal_browser_commands.rs  internal_browser_state.rs  layering.rs  lib.rs  logging.rs  orgii_preview.rs  screenshot_store.rs  types.rs  windows.rs
src-tauri/crates/code-map/: Cargo.toml
src-tauri/crates/code-map/src/: commands.rs  db.rs  extract.rs  format.rs  indexer.rs  lib.rs  lib_tests.rs  paths.rs  resolver.rs  service.rs  types.rs
src-tauri/crates/container/: Cargo.toml
src-tauri/crates/container/src/: commands.rs  docker.rs  docker_tests.rs  lib.rs  types.rs  types_tests.rs
src-tauri/crates/cursor-bridge/: Cargo.toml  README.md
src-tauri/crates/cursor-bridge-app/: Cargo.toml
src-tauri/crates/cursor-bridge-app/src/: client.rs  commands.rs  lib.rs  lifecycle.rs  vscdb_models.rs
src-tauri/crates/cursor-bridge/src/: cdp.rs  composer.rs  error.rs  lib.rs  models.rs  modes.rs  routing.rs  workbench.rs
src-tauri/crates/database/: Cargo.toml  README.md
src-tauri/crates/database/src/: lib.rs
src-tauri/crates/db-browser/: Cargo.toml
src-tauri/crates/db-browser/src/: commands.rs  lib.rs  ops.rs  pool.rs  types.rs
src-tauri/crates/db-clients/: Cargo.toml
src-tauri/crates/db-clients/src/: commands.rs  lib.rs
src-tauri/crates/dev-record/: Cargo.toml
src-tauri/crates/dev-record/src/: claude_code_db.rs  cli_session_db.rs  collector.rs  commands.rs  (+12 more)
src-tauri/crates/e2e-test/: Cargo.toml
src-tauri/crates/file-ops/: Cargo.toml
src-tauri/crates/git/: Cargo.toml
src-tauri/crates/git-api/: Cargo.toml
src-tauri/crates/inbox/: Cargo.toml
src-tauri/crates/integrations/: Cargo.toml
src-tauri/crates/key-vault/: Cargo.toml
src-tauri/crates/lsp/: Cargo.toml
src-tauri/crates/mobile-remote/: Cargo.toml
src-tauri/crates/orgii-mobile-relay/: Cargo.toml
src-tauri/crates/orgii-protocol/: Cargo.toml
src-tauri/crates/perf-utils/: Cargo.toml
src-tauri/crates/project-management/: Cargo.toml
src-tauri/crates/search/: Cargo.toml
src-tauri/crates/session-persistence/: Cargo.toml
src-tauri/crates/settings/: Cargo.toml
src-tauri/crates/shared-state/: Cargo.toml
src-tauri/crates/system-services/: Cargo.toml
src-tauri/crates/terminal/: Cargo.toml
src-tauri/crates/test-helpers/: Cargo.toml
src-tauri/crates/test-runner/: Cargo.toml
src-tauri/crates/transport/: Cargo.toml
src-tauri/crates/types/: Cargo.toml
src-tauri/crates/ui-indexer/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/model/: README.md
src-tauri/proto/: README.md  cursor_agent_v1.descriptor.pb
src-tauri/resources/: download_models.py
src-tauri/src/: CONVENTIONS.md  benchmark.rs  cursor_ide_watch.rs  lib.rs  main.rs  test_utils.rs
src-tauri/src/agent_sessions/: mod.rs  remote_shared.rs  stream_recovery.rs
src-tauri/src/api/: mobile_remote_host.rs  mobile_remote_host_tests.rs  mod.rs  server.rs  websocket_handler.rs
src-tauri/src/brick_history/: commands.rs
src-tauri/src/coding_agent/: commands.rs  mod.rs
src-tauri/src/commands/: handler_list.inc
src-tauri/src/infrastructure/: archive.rs  frontend_log.rs  housekeeping.rs  index_manager.rs  jsonrpc.rs  mod.rs  spreadsheet_csv.rs  spreadsheet_csv_tests.rs  spreadsheet_xlsx.rs  spreadsheet_xlsx_tests.rs  sticky_notes.rs  storage_commands.rs
src-tauri/src/orgtrack/: analysis_backfill.rs  exporter.rs  external_cli_detection.rs  extraction_scheduler.rs  history_commands.rs  impact_indexer.rs  mod.rs
src-tauri/src/setup/: bridges.rs  hooks.rs  mod.rs  sidecar_setup.rs  worktree.rs
src-tauri/src/test_utils/: test_env.rs
src-tauri/src/usage_diagnostics/: commands.rs  mod.rs  queue.rs  sanitize.rs  service.rs  types.rs  usage_diagnostics_tests.rs
src-tauri/tests/: dependency_invariants.rs  file_utils_filtering.rs  key_extraction.rs  merkle_diff_pipeline.rs  perf_pipeline.rs  tool_service_search.rs
(+7262 files in other folders)
