[package]
name = "advanced_search"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Optional advanced code search stack for ORGII"

[lib]
name = "advanced_search"
path = "src/lib.rs"

[[bin]]
name = "orgii-embedder"
path = "src/bin/embedder.rs"
required-features = ["semantic-search"]

[features]
default = []
semantic-search = [
    "dep:anyhow",
    "dep:async-trait",
    "dep:blake3",
    "dep:ignore",
    "dep:lazy_static",
    "dep:regex",
    "dep:reqwest",
    "dep:scopeguard",
    "dep:sled",
    "dep:tracing",
    "dep:usearch",
    "dep:llama-cpp-2",
]

[dependencies]
app_paths = { path = "../app-paths" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { workspace = true }
tokio = { workspace = true }

anyhow = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
blake3 = { version = "1.5", optional = true }
ignore = { version = "0.4", optional = true }
lazy_static = { version = "1.4", optional = true }
regex = { version = "1.9.5", optional = true }
reqwest = { version = "0.12", features = ["blocking", "stream"], default-features = false, optional = true }
scopeguard = { version = "1.2", optional = true }
sled = { version = "0.34", optional = true }
tracing = { version = "0.1.37", optional = true }
usearch = { version = "2.13", optional = true }

[target.aarch64-apple-darwin.dependencies]
llama-cpp-2 = { version = "0.1.129", features = ["metal"], optional = true }
