[package]
name = "agent_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Tauri commands for reading/writing the on-disk config files of external CLI agents (Cursor, Claude Code, Codex)."
publish = false

[lib]
name = "agent_cli"
path = "src/lib.rs"

[dependencies]
app_paths = { path = "../app-paths" }
app_utils = { path = "../app-utils" }

# Tauri command macro surface only — no AppHandle / Manager / Emitter use.
tauri = { workspace = true }

rusqlite = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }
toml = "0.8"
tracing = "0.1"
